<resources>
    <string name="app_name">Eat Quick</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>
    <string name="home">Home</string>
    <string name="welcome">Welcome!</string>
    <string name="hungry">Hungry?</string>
    <string name="order">Order Delicious Meals Online</string>
    <string name="search">Search</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="register">Sign up</string>
    <string name="social">Social</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google +</string>
    <string name="twitter">Twitter</string>
    <string name="other">Other</string>
    <string name="about">About Us</string>
    <string name="policy">Privacy Policy</string>
    <string name="action_clear_all">Clear All</string>
    <string name="action_mark_all_read">Mark All Read</string>

    <!--First part of Toolbar titles when navigation menu item is selected-->
    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>Login</item>
        <item>Sign up</item>
    </string-array>

    <!--Second part of Toolbar titles when navigation menu item is selected-->
    <string-array name="nav_item_activity_titles_2">
        <item>Facebook</item>
        <item>Google +</item>
        <item>Twitter</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
