<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_login"
            android:icon="@drawable/login"
            android:title="@string/login" />
        <item
            android:id="@+id/nav_register"
            android:icon="@drawable/register"
            android:title="@string/register" />
    </group>

    <item android:title="@string/social">
        <menu>
            <item
                android:id="@+id/nav_facebook"
                android:icon="@drawable/facebook"
                android:title="@string/facebook" />
            <item
                android:id="@+id/nav_google"
                android:icon="@drawable/google-plus"
                android:title="@string/google" />
            <item
                android:id="@+id/nav_twitter"
                android:icon="@drawable/twitter"
                android:title="@string/twitter" />
        </menu>
    </item>

    <item android:title="@string/other">
        <menu>
            <item
                android:id="@+id/nav_about_us"
                android:title="@string/about" />
            <item
                android:id="@+id/nav_privacy_policy"
                android:title="@string/policy" />
        </menu>
    </item>
</menu>